<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_ros2</name>
  <version>0.1.0</version>
  <description>Unified, ROS-independent IMU framework for F1TENTH (ICM-20948, BMI160)</description>
  <maintainer email="nnapat156@gmail.com">Napat</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_updater</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
